deployments/pathweb/workloads/ai-lab/bifrost/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bifrost
  namespace: ai-lab
  labels:
    app.kubernetes.io/name: bifrost
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - bifrost.services.home.yrf.me
  rules:
  - backendRefs:
    - name: bifrost
      port: 8080
